2009-05-29 Diegocr
	* Updated IXPrefs to Version 2.8
	  
	  - Added options which control how malloc() should react when
	    running out of memory.
	  
	  - Added a button which launches a external program to the
	    Task's Blacklisting management, it's currently made using MUI,
	    and loaded from SYS:Prefs/ixbl_MUI (either via WBRun if it's 
	    found, or falling back to 'C:Run <>NIL:')
	
	* library/hwck.c
	  library/ix_blacklist.c (new)
	  library/ix_settings.c
	  library/ixemul.h
	  library/ixprotos.h
	  library/malloc.c:  Implemented task's blacklisting features.
	  
	  Certain options can be configured globally (from ixprefs) or
	  per-task (from ixbl_MUI), When a global option is enabled but
	  the same option over a blacklisted task is disabled, the later
	  is taking into account. Same if you disable a global option and
	  it's enabled over a blacklisted task.
	  
	  Those options should be intuitive and easy to use. However, you'll
	  find additional info on the buble-helps from the ixbl_MUI program.

2009-05-25 Diegocr
	* library/malloc.c: Poolmem allocation system now uses Semaphores
	  rather than Forbid/Permit..   
	* library/ix_open_68k.c: the memory pool was created without 
	  checking if the allocation failed or not - Fixed.

2009-05-13 Bernd_afa
   Version 61.1
   * 
   * add func log2 log2f lrint lrintf to math.h
   * add func strtok_r to string.h
   * add func sqrtf/fmod to libc.
   * mmap use now page size alligned memory that is need by programs(GCC) to work ok
   * correct handling for extern inline in C99 Mode see http://gcc.gnu.org/ml/gcc/2007-03/msg01096.html
   * additional poolmem memsystem add.this let bugs find more easy because AOS memtracker work.
     POOLMEM define in malloc.c  can switch between them.
   
   * ix_CreateChildData function add in libc.a.This create correct Userdata structure ixemul need
     to store filehandles and used memlist of current task when a task is create with amiga OS create Task.